--- a/belbin/templates/header.html
+++ b/belbin/templates/header.html
@@ -2,14 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>BelBin</title>
+<title>header</title>
 </head>
 <body>
-	欢迎使用BelBin组队系统。<br>	
-	<form method='post'>
-		{% csrf_token %}
-		{{ form }}
-	<input type="submit" value="登录">
-	<a href="/register"><button>注册</button></a>
+	<a href="/logout"><button>退出</button></a>
+	<br>
 </body>
 </html>
