完成了三人的匹配，感觉应该差不多了

--- a/belbin/templates/header.html
+++ b/belbin/templates/header.html
@@ -29,6 +29,12 @@
 				重新测试
 			</div>
 		</a>
+		<a href="/match">
+			<div class="button purple">
+				<div class="shine"></div>
+				匹配队伍
+			</div>
+		</a>
 		<a href="/logout">
 			<div class="button gray">
 				<div class="shine"></div>
