--- a/belbin/templates/index.html
+++ b/belbin/templates/index.html
@@ -10,6 +10,7 @@
 		{% csrf_token %}
 		{{ form }}
 	<input type="submit" value="登录">
+	</form>
 	<a href="/register"><button>注册</button></a>
 </body>
 </html>
